// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App SwitchTheme Test SwitchTheme with dark mode 1`] = `
.c3 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  border: 0;
  background-color: #fff;
  color: #000;
  border: 1px solid #fff;
  font-size: 16px;
}

.c0 {
  width: 100%;
  height: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 80%;
  height: auto;
  padding: 8px;
  background-color: #1e1e1e;
  color: #fff;
}

.c2 {
  position: absolute;
  top: 0px;
  right: 0px;
}

<div>
  <div
    class="c0"
    data-testid="modal-wrapper"
  >
    <div
      class="c1"
      data-testid="modal-content"
    >
      Children of modal
      <div
        class="c2"
      >
        <button
          class="c3"
          cursor="pointer"
          data-testid="close-modal"
        >
          X
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`App SwitchTheme Test SwitchTheme with light mode 1`] = `
.c3 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  border: 0;
  background-color: #000;
  color: #fff;
  font-size: 16px;
}

.c0 {
  width: 100%;
  height: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 80%;
  height: auto;
  padding: 8px;
  background-color: #fff;
  color: #000;
}

.c2 {
  position: absolute;
  top: 0px;
  right: 0px;
}

<div>
  <div
    class="c0"
    data-testid="modal-wrapper"
  >
    <div
      class="c1"
      data-testid="modal-content"
    >
      Children of modal
      <div
        class="c2"
      >
        <button
          class="c3"
          cursor="pointer"
          data-testid="close-modal"
        >
          X
        </button>
      </div>
    </div>
  </div>
</div>
`;
